# bebop_analysis

./: current.csv  leaderboard.ipynb  pyproject.toml  scan.py  trading.ipynb
