[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["rysky-boi <dave@rysk.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
lxml = "^5.2.2"
requests = "^2.32.3"
matplotlib = "^3.9.0"
aioetherscan = "^0.9.4"
types-requests = "^2.32.0.20240622"
pandas-stubs = "^2.2.2.240603"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
arbiscan = {path = "../../Arbiscan", develop = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
